# GaussianBlurFilter

./: CMakeLists.txt  Dockerfile  README.md
include/: filterimagewidget.h  gaussianfilter.h  mainwindow.h  sourceimgwidget.h
resources/: resources.qrc
src/: filterimagewidget.cpp  gaussianfilter.cpp  main.cpp  mainwindow.cpp  sourceimgwidget.cpp
